# qa-assignment-test-mifx

./: .gitignore  01_answer.md  02_answer.md  README.md  api_test_case.xlsx  example.env  generate_csv.py  output.csv  pyproject.toml  query.sql  sauce_test_case.xlsx  test_api.py  test_sauce.py
test-report/: 02cd98c6-6c2e-42da-994b-635fe73097b8-container.json  03f63e1d-a576-48f1-a9e0-224064b28ce2-container.json  04d1bae5-eb49-4636-9a53-1a2248e1a341-container.json  07d5a903-7514-4425-b939-dea3d0981eb2-container.json  11dcb245-54fa-4bfd-bfdc-38104d2a7edd-container.json  139bb2d3-c6e0-4b63-906c-76d0ec4e8d40-container.json  1df9f8d2-78e8-4031-b2b0-19295967f09f-container.json  1e6f9ad6-540b-4a39-b7e6-6b8f32d40d4f-container.json  1f2628fc-f6bd-4976-b8ef-6d4facbcc335-container.json  1f5afeef-cd00-4847-9974-a263dbc4d114-container.json  23a341a2-da4f-43cc-b7c2-27d2ccd14887-container.json  2997ab22-d244-4350-b650-9a1881b5b721-container.json  2d9003d7-fb72-4c6e-bbdb-4b0ad5079b9a-container.json  2f586045-8c1e-4397-92a9-4403d80e2f9b-container.json  303bb286-ec6e-425f-b254-2177a798b544-result.json  3351d7b0-3c7c-4712-a933-7272dbd27302-container.json  38aff3fe-0aa3-4a5d-864c-d649e4ba4a3f-container.json  3e242285-62be-4405-9f76-6353d1c358da-container.json  3e569614-8e2c-4016-834a-be9c8555a78c-container.json  41cc1e6f-cf7c-4ef0-887b-f85eb5adc531-container.json  4372938f-b96c-4cc1-b6d5-951e06a9b2fa-container.json  43fa54b8-c669-4aa5-b4f6-9a30d7d73f4a-result.json  47977ca4-1b8e-4342-b7d1-6f75d408248a-container.json  565ef5ff-7157-475b-b02b-e4659d113d1f-container.json  (+77 more)
(+11 files in other folders)
